# python_advanced_diploma

backend/: Dockerfile
backend/src/: __init__.py  config.py
backend/src/core/: database.py
backend/src/models/: follow_model.py  like_model.py  media_model.py  tweet_model.py  user_model.py
backend/src/routes/: feed_routes.py  follow_routes.py  likes_routes.py  media_routes.py  tweets_routes.py
frontend/: Dockerfile  nginx.conf
frontend/conf.d/: default.conf
python_advanced_diploma/: README.md  docker-compose.yml
python_advanced_diploma/backend/: Dockerfile  output.txt  pyproject.toml  requirements.txt
python_advanced_diploma/backend/app/: __init__.py  config.py  database.py  main.py
python_advanced_diploma/backend/app/api/: media.py  tweets.py  users.py
python_advanced_diploma/backend/app/models/: __init__.py  follow.py  follow_model.py  like.py  like_model.py  media.py  media_model.py  tweet.py  tweet_model.py  user.py  user_model.py
python_advanced_diploma/backend/app/routes/: ping_routes.py  tweets_routes.py  user_routes.py
python_advanced_diploma/backend/app/schemas/: tweets.py  users.py
python_advanced_diploma/backend/app/services/: auth.py  tweets.py  users.py
python_advanced_diploma/backend/app/tests/: conftest.py  test_api_media.py  test_api_tweets.py  test_api_users.py
python_advanced_diploma/backend/requirements/: base.txt
